Update sections : About, Skills and Portfolio; Added new images for new projects; Update style.css;

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="home flex-center" id="home">
         <div class="home-container">
             <div class="media-icons">
-                <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc" target="_blank">
+                <a href="https://www.facebook.com/f.hermas22" target="_blank">
                     <i class="fab fa-facebook"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/hermas-francisco" target="_blank">
@@ -104,7 +104,7 @@
                     </div>
                     <ul class="professional-list">
                         <li class="list-item">
-                            <h3>+1</h3>
+                            <h3>+3</h3>
                             <span>Années <br>d'Expériences</span>
                         </li>
                         <!-- <li class="list-item">
@@ -112,7 +112,7 @@
                             <span>Clients <br>Satisfaits</span>
                         </li> -->
                         <li class="list-item">
-                            <h3>+9</h3>
+                            <h3>+12</h3>
                             <span>Projets <br>Réussis</span>
                         </li>
                     </ul>
@@ -143,8 +143,7 @@
                             <li class="item">
                                 <span class="year">2024-Présent</span>
                                 <p>
-                                    <span>Formation Programmation Informatique : Module Développement Mobile
-                                    (terminé)</span> - Institut des Métiers du Numérique (IMeN)
+                                    <span>Formation Programmation Informatique : Module Programmation Avancée et Frameworks Backend (en cours)</span> - Institut des Métiers du Numérique (IMeN)
                                 </p>
                             </li>
                             <!-- <li class="item">
@@ -204,7 +203,7 @@
                             <li class="bar">
                                 <div class="info">
                                     <span>PHP</span>
-                                    <span>85%</span>
+                                    <span>80%</span>
                                 </div>
                                 <div class="line php"></div>
                             </li>
@@ -265,14 +264,14 @@
                             <li class="bar">
                                 <div class="info">
                                     <span>Flutter</span>
-                                    <span>90%</span>
+                                    <span>85%</span>
                                 </div>
                                 <div class="line flutter"></div>
                             </li>
                             <li class="bar">
                                 <div class="info">
                                     <span>Laravel</span>
-                                    <span>80%</span>
+                                    <span>75%</span>
                                 </div>
                                 <div class="line laravel"></div>
                             </li>
@@ -285,23 +284,18 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- <div class="education">
+                    <div class="education">
                         <h4><label>Récompenses</label></h4>
                         <ul class="edu-list">
                             <li class="item">
-                                <span class="year">2022</span>
-                                <p><span>Meilleur Developpeur en SIL1</span> - École Sup. le Faucon, NA</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2023</span>
-                                <p><span>Meilleur Rédacteur Web</span> - Online Typodev Solution Ltd.</p>
-                            </li>
-                            <li class="item">
-                                <span class="year">2024</span>
-                                <p><span>Meilleur Freelancer</span> - Fiver & Upwork</p>
+                                <span class="year">2025</span>
+                                <p><span>AWS Cloud Club Core Team</span> - AWS Community</p>
+                                <a href="https://www.credly.com/badges/4e75f1c7-c6c8-4edf-9d1b-8d7c88d9a6b6/public_url" class="badge-btn" target="_blank">
+                                    <i class="fas fa-medal"></i> Voir le badge
+                                </a>
                             </li>
                         </ul>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="skills-description">
                     <h3>Travaux & Expériences</h3>
@@ -309,7 +303,7 @@
                 <div class="skills-info">
                     <div class="experience-card">
                         <div class="upper">
-                            <h3>Développeur Mobile Junior</h3>
+                            <h3>Flutter Mobile Developer</h3>
                             <h5>Temps Plein | Projets personnels et académiques</h5>
                             <span>2025 - Présent</span>
                         </div>
@@ -322,7 +316,7 @@
                     </div>
                     <div class="experience-card">
                         <div class="upper">
-                            <h3>Développeur Web Junior</h3>
+                            <h3>Laravel Software Developer</h3>
                             <h5>Temps Plein | Auto-apprentissage et projets académiques</h5>
                             <span>2024 - Présent</span>
                         </div>
@@ -333,20 +327,21 @@
                             en développement Front-End et Back-End.
                         </p>
                     </div>
-                    <!-- <div class="experience-card">
+                    <div class="experience-card">
                         <div class="upper">
-                            <h3>Technicien en Chef ~ Resp. Service Client</h3>
-                            <h5>Temps Partiel | Freelance</h5>
-                            <span>2023 - Présent</span>
+                            <h3>AWS Cloud Club Captain</h3>
+                            <h5>Temps Partiel | Évènements</h5>
+                            <span>2025 - Présent</span>
                         </div>
                         <div class="hr"></div>
-                        <h4><label>HERNOTIX Repair Services.</label></h4>
+                        <h4><label>AWS Cloud Club at IMeN</label></h4>
                         <p>
-                            Réparation, maintenance et optimisation de matériel informatique et téléphonique. 
-                            Spécialisé en récupération de données et en solutions sur mesure.
+                            Pilotage et organisation des activités du club AWS au sein de l'institut. Animation d'ateliers 
+                            et de formations sur les services cloud AWS, mise en place de projets pratiques et organisation 
+                            d'événements pour promouvoir l'adoption des technologies cloud parmi les étudiants et professionnels.
                         </p>
                     </div>
-                    <div class="experience-card">
+                    <!-- <div class="experience-card">
                         <div class="upper">
                             <h3>Responsable du Service Marketing ~ Resp. Stock ~ Resp. Service Client</h3>
                             <h5>Temps Partiel | Freelance</h5>
@@ -755,6 +750,104 @@
             <h2 class="section-title-02">Projets Réalisés</h2>
             <div class="content">
                 <div class="portfolio-list">
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Library-API</h3>
+                                <span>Laravel | MySQL | REST API</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img12_library-api.png" alt="Library-API Screenshot">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>Library-API</h3>
+                                <img src="images/portfolio-images/project-img12_library-api.png" alt="Library-API Screenshot">
+                                <p>
+                                    <p>
+                                        API REST moderne pour gérer un système de bibliothèque numérique. 
+                                        Gestion complète des livres et catégories avec Laravel et MySQL.
+                                    </p>
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/library-api" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/library-api" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>CandForm</h3>
+                                <span>Laravel | TailwindCSS | MySQL</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img11_candform.png" alt="CandForm Screenshot">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>CandForm</h3>
+                                <img src="images/portfolio-images/project-img11_candform.png" alt="CandForm Screenshot">
+                                <p>
+                                    Application web pour soumettre des candidatures à des offres d'emploi. 
+                                    Interface responsive avec TailwindCSS, validation client/serveur et confirmation email automatique.
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/candform" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/candform" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>AutoSocial</h3>
+                                <span>Laravel | TailwindCSS | MySQL | AI</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img10_autosocial.png" alt="AutoSocial Screenshot">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>AutoSocial</h3>
+                                <img src="images/portfolio-images/project-img10_autosocial.png" alt="AutoSocial Screenshot">
+                                <p>
+                                    Réseau social mini en preuve de concept construit avec Laravel. 
+                                    Projet conçu pour explorer l'architecture d'applications web modernes intégrant des agents autonomes et l'IA.
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/autosocial" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/autosocial" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div class="img-card-container">
                         <div class="img-card">
                             <div class="overlay"></div>
@@ -1209,7 +1302,7 @@
                 <h3>Suivez-moi</h3>
             <ul>
                 <li>
-                    <a href="http://www.facebook.com/profile.php?id=100094992227168&mibextid=2JQ9oc" target="_blank">
+                    <a href="https://www.facebook.com/f.hermas22" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
