--- a/index.html
+++ b/index.html
@@ -285,10 +285,19 @@
                         </ul>
                     </div>
                     <div class="education">
-                        <h4><label>Récompenses</label></h4>
+                        <h4><label>Certifications</label></h4>
                         <ul class="edu-list">
                             <li class="item">
-                                <span class="year">2025</span>
+                                <span class="year">Novembre 2025</span>
+                                <p><span>AWS Cloud Club Captain</span> - AWS Community</p>
+                                <a href="https://www.credly.com/badges/63b84768-e35a-47a6-ac8d-d6028ebf1c28/public_url" class="badge-btn" target="_blank">
+                                    <i class="fas fa-medal"></i> Voir le badge
+                                </a>
+                            </li>
+                        </ul>
+                        <ul class="edu-list">
+                            <li class="item">
+                                <span class="year">Décembre 2025</span>
                                 <p><span>AWS Cloud Club Core Team</span> - AWS Community</p>
                                 <a href="https://www.credly.com/badges/4e75f1c7-c6c8-4edf-9d1b-8d7c88d9a6b6/public_url" class="badge-btn" target="_blank">
                                     <i class="fas fa-medal"></i> Voir le badge
@@ -1331,7 +1340,7 @@
             </div>
         </div>
         <div class="footer-copyright group">
-            <p>© 2024 - by Hermas Francisco (HERNOTIX Tech). Tous droits réservés.</p>
+            <p>© 2025 - by Hermas Francisco (HERNOTIX Tech). Tous droits réservés.</p>
         </div>
     </footer>
 
