Add new projects to Portfolio section; Other modifications;

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <span>Clients <br>Satisfaits</span>
                         </li> -->
                         <li class="list-item">
-                            <h3>+12</h3>
+                            <h3>+14</h3>
                             <span>Projets <br>Réussis</span>
                         </li>
                     </ul>
@@ -345,7 +345,7 @@
                         <div class="hr"></div>
                         <h4><label>AWS Cloud Club at IMeN</label></h4>
                         <p>
-                            Pilotage et organisation des activités du club AWS au sein de l'institut. Animation d'ateliers 
+                            Pilotage et organisation des activités du club AWS au sein de la communauté. Animation d'ateliers 
                             et de formations sur les services cloud AWS, mise en place de projets pratiques et organisation 
                             d'événements pour promouvoir l'adoption des technologies cloud parmi les étudiants et professionnels.
                         </p>
@@ -759,6 +759,74 @@
             <h2 class="section-title-02">Projets Réalisés</h2>
             <div class="content">
                 <div class="portfolio-list">
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>EduTrack</h3>
+                                <span>Laravel 12 | Blade | TailwindCSS | JavaScript</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img14_edutrack.png" alt="EduTrack Screenshot">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>EduTrack</h3>
+                                <img src="images/portfolio-images/project-img14_edutrack.png" alt="EduTrack Screenshot">
+                                <p>
+                                    <p>
+                                        Interface frontend moderne de type Single Page Application (SPA) pour le suivi des apprenants.  
+                                        Développée avec Laravel 12, Blade, TailwindCSS et JavaScript pur.
+                                    </p>
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/edutrack" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/edutrack" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>LearnyClass</h3>
+                                <span>Laravel 12 | Blade | TailwindCSS | JavaScript</span>
+                            </div>
+                            <img src="images/portfolio-images/project-img13_learnyclass.png" alt="LearnyClass Screenshot">
+                        </div>
+                        <div class="portfolio-model flex-center">
+                            <div class="portfolio-model-body">
+                                <i class="fas fa-times portfolio-close-btn"></i>
+                                <h3>LearnyClass</h3>
+                                <img src="images/portfolio-images/project-img13_learnyclass.png" alt="LearnyClass Screenshot">
+                                <p>
+                                    <p>
+                                        Interface frontend moderne et réactive pour une plateforme d’apprentissage en ligne.  
+                                        Développée avec Laravel 12, Blade, TailwindCSS et JavaScript pur.
+                                    </p>
+                                </p>
+                                <ul class="visit-project-btns-1">
+                                    <!-- <li>
+                                        <a href="#" class="visit-btn" target="_blank">Visiter le site <i class="fas fa-eye"></i></a>
+                                    </li> -->
+                                    <li>
+                                        <a href="https://github.com/fhermas22/learny-class" class="visit-btn" target="_blank">Voir le dépôt <i class="fab fa-github"></i></a>
+                                    </li>
+                                    <!-- <li>
+                                        <a href="https://github.com/fhermas22/learny-class" class="github-repo-btn" target="_blank"><i class="fab fa-github-square"></i></a>
+                                    </li> -->
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div class="img-card-container">
                         <div class="img-card">
                             <div class="overlay"></div>
